Bug 1287657 - Context menu items should not be disabled for media with a blob URL; r=kinetik, r=baku