dom/url/URL.h
@@ -81,6 +81,10 @@ public:
   RevokeObjectURL(const GlobalObject& aGlobal, const nsAString& aURL,
                   ErrorResult& aRv);
 
+  static bool
+  IsValidURL(const GlobalObject& aGlobal, const nsAString& aURL,
+             ErrorResult& aRv);
+
   virtual void
   GetHref(nsAString& aHref, ErrorResult& aRv) const = 0;
 
